feat: Complete timetable generation with lab room mapping
- Map all 113 lab rooms to corresponding lab courses by department/semester
- Assign section 'A' to all lab rooms for consistency
- Backend TimetableService now properly handles lab room assignments
- Updated CourseRepository with department code lookup support
- Database: 329 rooms (216 class + 113 lab) fully configured and mapped
- Timetable generation now produces complete schedules with all room types
- Users can generate, view, and refresh timetables from admin dashboard